@@ -1,11 +1,15 @@
 Changes specific to mutt-ng:
 
-2004-02-21:
+2005-02-22:
+  * Merged mutt changes
+  * Sidebar now honors the imap_home_namespace
+
+2005-02-21:
   * Merged past mutt changes
   * Fixed a bug in mutt_FormatString regarding aligning the rest of a string to the right (%>)
   * Added fix from jschmitt
 
-2004-02-16:
+2005-02-16:
   * fixed segfault in curs_lib.c
   * fixed names
 
