@@ -1,3 +1,7 @@
+2005-02-21 04:42:34  Alain Bench  <messtic@oreka.com>  (roessler)
+
+	* parse.c, pgp.c, sendlib.c: Bcc should be RFC2047-encoded, too.
+
 2005-02-19 16:00:24  Thomas Roessler  <roessler@does-not-exist.org>  (roessler)
 
 	* sendlib.c: Fix Debian 295528.
